# src/main/java/com/fiap/techchallenge/infrastructure/adapters/in/web/UserApiImpl.java
@@ -6,9 +6,7 @@ import com.fiap.techchallenge.application.ports.in.user.dtos.CreateUser;
 import com.fiap.techchallenge.infrastructure.adapters.in.mapper.UserApiMapper;
 import com.fiap.techchallenge.api.UsersApi;
 import com.fiap.techchallenge.application.ports.in.user.dtos.ChangePassword;
-import com.fiap.techchallenge.model.ChangePasswordRequest;
-import com.fiap.techchallenge.model.UserRequest;
-import com.fiap.techchallenge.model.UserResponse;
+import com.fiap.techchallenge.model.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -28,31 +26,33 @@ public class UserApiImpl implements UsersApi {
     }
 
     @Override
-    public ResponseEntity<UserResponse> createUser(UserRequest userRequest) {
-        CreateUser createMapper = USERS_API_MAPPER.mapToCreateUser(userRequest);
+    public ResponseEntity<CreateUserResponse> createUser(CreateUserRequest createUserRequest) {
+        CreateUser createMapper = USERS_API_MAPPER.mapToCreateUser(createUserRequest);
 
-        UserResponse userResponse = USERS_API_MAPPER.mapToUserResponse(this.userUseCase.create(createMapper));
+        CreateUserResponse userResponse = USERS_API_MAPPER
+                .mapToCreateUserResponse(this.userUseCase.create(createMapper));
 
         return ResponseEntity.status(201).body(userResponse);
     }
 
     @Override
-    public ResponseEntity<Void> deleteUser(UUID id) {
-        userUseCase.delete(id);
-        return ResponseEntity.noContent().build();
+    public ResponseEntity<UserResponse> updateUser(UUID id, UpdateUserRequest updateUserRequest) {
+        User userResponse = this.userUseCase.update(id, USERS_API_MAPPER.mapToUpdateUser(updateUserRequest));
+
+        return ResponseEntity.ok(USERS_API_MAPPER.mapToUserResponse(userResponse));
     }
 
     @Override
     public ResponseEntity<UserResponse> getUser(UUID id) {
-        User user = userUseCase.getById(id);
+        User user = this.userUseCase.getById(id);
         UserResponse response = USERS_API_MAPPER.mapToUserResponse(user);
+
         return ResponseEntity.ok(response);
     }
 
     @Override
     public ResponseEntity<List<UserResponse>> getUsers() {
-
-        List<User> users = userUseCase.getAll();
+        List<User> users = this.userUseCase.getAll();
         List<UserResponse> responses = users.stream().map(USERS_API_MAPPER::mapToUserResponse)
                 .collect(Collectors.toList());
 
@@ -60,8 +60,10 @@ public class UserApiImpl implements UsersApi {
     }
 
     @Override
-    public ResponseEntity<UserResponse> updateUser(UUID id, UserRequest userRequest) {
-      return null;
+    public ResponseEntity<Void> deleteUser(UUID id) {
+        this.userUseCase.delete(id);
+
+        return ResponseEntity.noContent().build();
     }
 
     @Override
